--- a/src/web/CastAmNow.Web/CastAmNow.Web.Client/CastAmNow.Web.Client.csproj
+++ b/src/web/CastAmNow.Web/CastAmNow.Web.Client/CastAmNow.Web.Client.csproj
@@ -9,7 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly"/>
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\ui\CastAmNow.UI\CastAmNow.UI.csproj" />
   </ItemGroup>
 
 </Project>
