Remove unused CSS and Bootstrap library files.
Deleted obsolete `app.css` and Bootstrap v5.3.3 files to clean up unused assets from the project. This reduces unnecessary bloat and ensures only relevant files are maintained.

--- a/src/ui/CastAmNow.UI/CastAmNow.UI.csproj
+++ b/src/ui/CastAmNow.UI/CastAmNow.UI.csproj
@@ -13,4 +13,10 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.Web"/>
   </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="Microsoft.AspNetCore.Http.Abstractions">
+      <HintPath>..\..\..\..\..\..\..\usr\local\share\dotnet\shared\Microsoft.AspNetCore.App\9.0.0\Microsoft.AspNetCore.Http.Abstractions.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 </Project>
