--- a/src/web/CastAmNow.Web/CastAmNow.Web.Client/CastAmNow.Web.Client.csproj
+++ b/src/web/CastAmNow.Web/CastAmNow.Web.Client/CastAmNow.Web.Client.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\..\..\ui\CastAmNow.UI\CastAmNow.UI.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\" />
+  </ItemGroup>
+
 </Project>
