--- a/src/ui/CastAmNow.UI/CastAmNow.UI.csproj
+++ b/src/ui/CastAmNow.UI/CastAmNow.UI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -11,12 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web"/>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="Microsoft.AspNetCore.Http.Abstractions">
-      <HintPath>..\..\..\..\..\..\..\usr\local\share\dotnet\shared\Microsoft.AspNetCore.App\9.0.0\Microsoft.AspNetCore.Http.Abstractions.dll</HintPath>
-    </Reference>
+	  <PackageReference Include="Microsoft.AspNetCore.Components.Web"/>
+	  <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions"/>
   </ItemGroup>
 </Project>
