--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -82,5 +82,10 @@
     <PackageVersion Include="Microsoft.AspNetCore.Http" Version="2.3.0" />
     <PackageVersion Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
     <PackageVersion Include="Bogus" Version="35.6.3" />
+    <PackageVersion Include="Refit" Version="8.0.0" />
+    <PackageVersion Include="Azure.Storage.Blobs" Version="12.23.0" />
+    <PackageVersion Include="Aspire.Azure.Storage.Blobs" Version="9.3.1" />
+    <PackageVersion Include="Microsoft.AspNetCore.JsonPatch" Version="9.0.1" />
+    <PackageVersion Include="Microsoft.AspNetCore.SignalR.Client" Version="9.0.1" />
   </ItemGroup>
 </Project>
