--- a/src/ui/CastAmNow.UI/CastAmNow.UI.csproj
+++ b/src/ui/CastAmNow.UI/CastAmNow.UI.csproj
@@ -11,7 +11,11 @@
   </ItemGroup>
 
   <ItemGroup>
-	  <PackageReference Include="Microsoft.AspNetCore.Components.Web"/>
-	  <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions"/>
+	  <PackageReference Include="Microsoft.AspNetCore.Components.Web" />
+	  <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\core\CastAmNow.Sdk\CastAmNow.Sdk.csproj" />
   </ItemGroup>
 </Project>
