--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -3,14 +3,9 @@
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
     <MauiVersion>9.0.30</MauiVersion>
   </PropertyGroup>
-  <ItemGroup Condition="'$(TargetFramework)'=='net9.0' Or 
-                      '$(TargetFramework)'=='net9.0-android' Or 
-                      '$(TargetFramework)'=='net9.0-ios' Or 
-                      '$(TargetFramework)'=='net9.0-maccatalyst' Or
-                      ('$(TargetFramework)'=='net9.0-windows10.0.19041.0' And $([MSBuild]::IsOSPlatform('windows')))">
+  <ItemGroup Condition="'$(TargetFramework)'=='net9.0' Or &#xA;                      '$(TargetFramework)'=='net9.0-android' Or &#xA;                      '$(TargetFramework)'=='net9.0-ios' Or &#xA;                      '$(TargetFramework)'=='net9.0-maccatalyst' Or&#xA;                      ('$(TargetFramework)'=='net9.0-windows10.0.19041.0' And $([MSBuild]::IsOSPlatform('windows')))">
     <!-- Aspire -->
     <PackageVersion Include="Aspire.Hosting.AppHost" Version="9.3.1" />
-    
     <!-- Service defaults -->
     <PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="9.4.0" />
     <PackageVersion Include="Microsoft.Extensions.ServiceDiscovery" Version="9.3.1" />
@@ -19,17 +14,14 @@
     <PackageVersion Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.12.0" />
     <PackageVersion Include="OpenTelemetry.Instrumentation.Http" Version="1.12.0" />
     <PackageVersion Include="OpenTelemetry.Instrumentation.Runtime" Version="1.12.0" />
-    
     <!-- APIs -->
     <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8" />
-
     <!-- Aspire integration testing -->
     <PackageVersion Include="Aspire.Hosting.Testing" Version="9.3.1" />
     <PackageVersion Include="coverlet.collector" Version="6.0.2" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.10.0" />
     <PackageVersion Include="xunit" Version="2.9.3" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="3.0.2" />
-    
     <!-- Integration testing for .NET 9 -->
     <PackageVersion Include="coverlet.collector" Version="6.0.2" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
@@ -42,19 +34,19 @@
     <PackageVersion Include="xunit" Version="2.9.3" />
     <PackageVersion Include="xunit.runner.visualstudio" Version="3.0.1" />
     <PackageVersion Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.4" />
-	  <PackageVersion Include="Moq" Version="4.20.72" />
-
+    <PackageVersion Include="Moq" Version="4.20.72" />
     <!-- Aspire integration testing for .NET 9 -->
     <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.8" />
     <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly" Version="9.0.8" />
-
     <PackageVersion Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
     <PackageVersion Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="$(MauiVersion)" />
     <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0" />
-    
     <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="9.0.0" />
     <PackageVersion Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.0" />
     <PackageVersion Include="Microsoft.AspNetCore.Http" Version="2.3.0" />
     <PackageVersion Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageVersion Include="Blazored.Modal" Version="7.3.1" />
   </ItemGroup>
 </Project>
