--- a/src/web/CastAmNow.Web/CastAmNow.Web.Client/CastAmNow.Web.Client.csproj
+++ b/src/web/CastAmNow.Web/CastAmNow.Web.Client/CastAmNow.Web.Client.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazored.Modal" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" />
   </ItemGroup>
 
