--- a/src/ui/CastAmNow.UI/CastAmNow.UI.csproj
+++ b/src/ui/CastAmNow.UI/CastAmNow.UI.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+	  <PackageReference Include="Blazored.LocalStorage" />
 	  <PackageReference Include="Blazored.Modal" />
 	  <PackageReference Include="Microsoft.AspNetCore.Components.Web"/>
 	  <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions"/>
