--- a/src/web/CastAmNow.Web/CastAmNow.Web/CastAmNow.Web.csproj
+++ b/src/web/CastAmNow.Web/CastAmNow.Web/CastAmNow.Web.csproj
@@ -21,6 +21,7 @@
     <ProjectReference Include="..\..\..\..\aspire\CastAmNow.ServiceDefaults\CastAmNow.ServiceDefaults.csproj" />
     <ProjectReference Include="..\..\..\ui\CastAmNow.UI\CastAmNow.UI.csproj" />
     <ProjectReference Include="..\CastAmNow.Web.Client\CastAmNow.Web.Client.csproj" />
+    <PackageReference Include="Blazored.LocalStorage" />
     <PackageReference Include="Blazored.Modal" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" />
   </ItemGroup>
