Add Azure Blob Storage integration and services
This commit introduces Azure Blob Storage support into the application.
Key changes include the addition of Azure Storage services in `AppHost.cs`,
modifications to the `DefectService` class to be internal, and updates to
the `DefectApi` class to utilize a `BlobContainerClient` for file uploads.
The `IDefectApi` interface is extended with a new `IStorageUploadService`
for managing file uploads. The `Program.cs` file is updated to configure
the Azure Blob Storage client and register the `DefectApi`. A new
`MicrosoftStorageUploadService` class is implemented for upload logic
and progress tracking. Project files are also updated with necessary
package references for Azure Storage.

--- a/src/web/CastAmNow.Web/CastAmNow.Web/CastAmNow.Web.csproj
+++ b/src/web/CastAmNow.Web/CastAmNow.Web/CastAmNow.Web.csproj
@@ -27,5 +27,6 @@
     <ProjectReference Include="..\..\..\ui\CastAmNow.UI\CastAmNow.UI.csproj" />
     <ProjectReference Include="..\CastAmNow.Web.Client\CastAmNow.Web.Client.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" />
+	<PackageReference Include="Aspire.Azure.Storage.Blobs" />
   </ItemGroup>
 </Project>
